# murasaki

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: SECURITY.md
.github/workflows/: ci.yml
murasaki/: agent.py  cli.py  models.py  renderer.py
murasaki/data/: atomic_loader.py  attack_loader.py  caldera_loader.py
murasaki/templates/: report.html.j2  report.md.j2
murasaki/tools/: registry.py
tests/: test_agent.py  test_models.py  test_renderer.py
